# API/docs/swagger.json
@@ -376,6 +376,10 @@
                     "description": "hash",
                     "type": "string"
                 },
+                "is_active": {
+                    "description": "is_active",
+                    "type": "boolean"
+                },
                 "is_admin": {
                     "description": "is_admin",
                     "type": "boolean"
@@ -404,6 +408,10 @@
                 "first_name": {
                     "description": "first_name",
                     "type": "string"
+                },
+                "is_active": {
+                    "description": "is_active",
+                    "type": "boolean"
                 },
                 "is_admin": {
                     "description": "is_admin",
